--- a/mySmartHolyBasil/public/views/nav.html
+++ b/mySmartHolyBasil/public/views/nav.html
@@ -7,7 +7,7 @@
             
             <div class="mdl-layout-spacer"></div>
             <!-- Search-->
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+            <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
                 <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
                     <i class="material-icons">search</i>
                 </label>
@@ -21,9 +21,9 @@
             <div class="material-icons mdl-badge mdl-badge--overlap mdl-button--icon notification" id="notification"
                  data-badge="23">
                 notifications_none
-            </div>
+            </div> -->
             <!-- Notifications dropdown-->
-            <ul class="mdl-menu mdl-list mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right mdl-shadow--2dp notifications-dropdown"
+           <!-- <ul class="mdl-menu mdl-list mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right mdl-shadow--2dp notifications-dropdown"
                 for="notification">
                 <li class="mdl-list__item">
                     You have 23 new notifications!
@@ -79,7 +79,7 @@
 
             <div class="material-icons mdl-badge mdl-badge--overlap mdl-button--icon message" id="inbox" data-badge="4">
                 mail_outline
-            </div>
+            </div> -->
             <!-- Messages dropdown-->
             <ul class="mdl-menu mdl-list mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right mdl-shadow--2dp messages-dropdown"
                 for="inbox">
@@ -144,7 +144,7 @@
                 <img src="images/vasudev.jpg">
             </div>
             <!-- Account dropdawn-->
-            <ul class="mdl-menu mdl-list mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect mdl-shadow--2dp account-dropdown"
+            <!--<ul class="mdl-menu mdl-list mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect mdl-shadow--2dp account-dropdown"
                 for="icon">
                 <li class="mdl-list__item mdl-list__item--two-line">
                     <span class="mdl-list__item-primary-content">
@@ -188,7 +188,7 @@
                         Log out
                     </span>
                 </li>
-            </ul>
+            </ul> 
 
             <button id="more"
                     class="mdl-button mdl-js-button mdl-button--icon">
@@ -206,7 +206,7 @@
                 <li class="mdl-menu__item">
                     F.A.Q.
                 </li>
-            </ul>
+            </ul> -->
         </div>
     </header>
 
